kustomize-nginx-2/nginx-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
