kustomize-nginx-2/nginx-sample-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample-ingress-2
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/clusterissuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - nginxsample-2.precasttoolkit.com
    secretName: nginx-sample-2-tls
  rules:
  - host: nginxsample-2.precasttoolkit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-2
            port:
              number: 80
